# varsig

./: Cargo.toml  README.md
examples/test_data/: EdDSA.varsig  Unknown.varsig
examples/varsig/: main.rs
examples/varsig/util/: config.rs  error.rs  keychain.rs  local_file.rs  mod.rs  ssh_agent.rs
src/: error.rs  lib.rs  vs.rs
src/serde/: de.rs  mod.rs  ser.rs
