[package]
name = "varsig"
version = "0.1.2"
edition = "2021"
authors = ["Dave Huseby <dwh@linuxprogrammer.org>"]
description = "Varsig self-describing signature implementation"
repository = "https://github.com/cryptidtech/varsig.git"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
hex = "0.4"
multibase = "0.9"
multicodec = { version = "0.2", git = "https://github.com/cryptidtech/rust-multicodec.git" }
thiserror = "1.0"
unsigned-varint = "0.7"

[dev-dependencies]
directories = "5.0"
ed25519-dalek = "2.0"
log = "0.4"
rand = "0.8"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_derive = "1.0"
ssh-key = { version = "0.6.1", features = ["crypto", "ed25519"]}
ssh-agent-client-rs = { version = "0.5", git = "file:///home/user/Projects/cryptid/ipdave/ssh-agent-client-rs" }
structopt = "0.3"
stderrlog = "0.5"

[[example]]
name = "varsig"
