[package]
name = "varsig"
version = "0.1.3"
edition = "2021"
authors = ["Dave Huseby <dwh@linuxprogrammer.org>"]
description = "Varsig self-describing signature implementation"
repository = "https://github.com/cryptidtech/varsig.git"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
hex = "0.4"
multibase = "0.9"
multicodec = { version = "0.2", git = "https://github.com/cryptidtech/rust-multicodec.git" }
multiutil = { version = "0.1", git = "https://github.com/cryptidtech/multiutil.git" }
ssh-key = { version = "0.6.2", features = ["crypto", "ed25519"]}
thiserror = "1.0"
unsigned-varint = "0.8"
