[package]
name = "varsig"
version = "0.1.4"
edition = "2021"
authors = ["Dave Huseby <dwh@linuxprogrammer.org>"]
description = "Varsig self-describing signature implementation"
repository = "https://github.com/cryptidtech/varsig.git"
readme = "README.md"
license = "Apache-2.0"

[features]
default = ["serde"]

[dependencies]
multibase = "0.9"
multicodec = { version = "0.2", git = "https://github.com/cryptidtech/rust-multicodec.git" }
multitrait = { version = "0.1", git = "https://github.com/cryptidtech/multitrait.git" }
multiutil = { version = "0.1", git = "https://github.com/cryptidtech/multiutil.git" }
serde = { version = "1.0", default-featurs = false, features = ["alloc", "derive"], optional = true }
ssh-key = { version = "0.6.2", features = ["crypto", "ed25519"]}
thiserror = "1.0"
unsigned-varint = { version = "0.8", features = ["std"] }

[dev-dependencies]
hex = "0.4"
serde_test = "1.0"
serde_json = "1.0"
serde_cbor = "0.11"
